Tiny fix for check tick in dark mode

--- a/new/assets/css/app.css
+++ b/new/assets/css/app.css
@@ -1,17 +1,14 @@
 .form-signin {
   padding: 1rem;
 }
-
 .form-signin .form-floating:focus-within {
   z-index: 2;
 }
-
 .form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
@@ -23,6 +20,13 @@
   width: 1rem;
   height: 1rem;
   fill: currentColor
+}
+
+/* dark/light mode check icon */
+.dropdown-item .bi-check2 {
+  position: absolute;
+  right: 1rem;
+  font-size: 1rem;
 }
 
 /* floating div for wine quick search results */
